frontend/src/app/pages/map/map.component.css
:host {
  --header-height: 80px;
  --header-padding: 20px;
  --header-padding-top: 40px;
  --logo-title-height: 60px;
}

.headWrapper { 
  width: 100%;
  left: 0%;
  margin-top: 12pt;
}

.wrapper {
  position: fixed; 
  width: 100%;
  top: 15%;
  z-index: 9998;
}

.logo.title {
  /* "Lokale" Styles können "Globale" Styles überschreiben */
  font-size: 38px;
  height: var(--logo-title-height);
  margin: 0;
}

.map-container {
  height: 100%;
  width: 100%;
  padding: 0;
}

.map-header {
  position: relative;
  padding: 20px;
  padding-top: var(--header-padding-top);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  min-height: var(--header-height);
  width: 100%;
}

.map-header .switch-btn {
  position: absolute;
  top: 50px;
  left: 30px;
  transform: rotate(-90deg) scale(1.5);
  color: var(--icon-color);
}

.map {
  /* 
    Wegen einigen Eigenheiten von Leaflet muss die Karte die volle Höhe einnehmen,
    außer den Platz, der für den Header reserviert ist. "Calc" erlaubt es uns 
    diese Größe automatisch zu errechnen. */

  /* height: calc(100% - var(--header-height)); */

  /*
    Update (Silvan Ronge): Um die Höhe des Headers wieder von der Höhe der Karte abzuziehen, ist es nicht
    sinnvoll, den Wert, der dem Header bei min-height zugewiesen wird, abzuziehen. Der Grund dafür ist, dass
    der Inhalt des Headers eine tatsächliche Höhe erzeugt, die den Wert von 80px überschreitet. Da es sich um
    min-height handelt, wird der Header auf die tatsächliche Höhe des Inhalts erweitert. Deshalb ist es notwendig,
    die tatsächliche Höhe des Headers von der Höhe der Karte abzuziehen. Diese setzt sich zusammen aus dem Padding,
    das in .map-header definiert ist und der Höhe der inneren Elemente. Davon gibt es nur eines, nämlich das Element
    mit den Klassen "title logo". Diesem Element habe ich nun eine feste Höhe von 60px zugewiesen, da sich die Höhe
    sonst dynamisch an den Inhalt anpasst. Das würde in diesem Fall von der Schriftgröße des Wortes "SCOOTER" abhängen.
    Dabei kann aber ein krummer Wert rauskommen (z.B. eine Höhe von 60.8). Damit können wir hier nicht exakt rechnen.
    Die tatsächliche Höhe des Header ergibt sich dann wie folgt:
    60px (Höhe des Elements "title logo") + 40px (Padding oben) + 20px (Padding unten) = 120px.
  */
  height: calc(100% - var(--logo-title-height) - var(--header-padding-top) - var(--header-padding));
  width: 100%;
  padding: 0;
}

.search-input {
  border-radius: 15px;
  padding: 10px;
  width: 100%;
  margin-top: 10px;
  font-size: 18px;
  border: 1px solid black;
}

.qr-icon {
  position: absolute;
  top: -47px;
  right: 0px;
  width: 30px;
  height: 30px;
  cursor: pointer;
  margin-top: 45px;
}

.qr-container {
  position: absolute;
  width: 30px;
  height: 30px;
  top: 55px;
  right: 20px;
  cursor: pointer;
}

.video-preview {
  width: 100%;
  object-fit: cover;
  background-color: #26627C;
  display: flex;
  justify-content: center;
  align-items: center;
}

.video-visible {
  height: calc(100% - var(--logo-title-height) - var(--header-padding-top) - var(--header-padding));
}

.video-hidden {
  height: 0; 
}

.loading-container {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  align-items: center;
  justify-content: center;
}

.filter-btn {
  position: absolute;
  top: 50px;
  left: 85%;
  color: var(--icon-color);
}

.filter-menu-container {
  width: 90%;
  margin: 0 auto;
  background-color: #fff;
  border: 2px solid #4a4242;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

.filter-menu {
  max-height: 400px; /* Adjust this as needed */
  overflow-y: auto;
}

.filter-menu-container .filter-content{
  color: black;
}

.filter-row {
  display: flex; /* Verwende Flexbox */
}

.app-user-input {
  margin-bottom: 10px; /* Add a vertical space between the elements */
  flex: 1; /* Let the app-user-input components grow flexibly */
}

.filter-row app-user-input {
  flex: 1; /* Let the app-user-input components in the line grow flexibly */
  margin-right: 10px; /* Add a horizontal space between the elements */
}

.filter-row app-user-input:first-child {
  flex: 1; /* Change the flex property of the first app-user-input element */
}

.filter-row app-user-input:last-child {
  flex: 1; /* Change the flex property of the last app-user-input element */
  margin-right: 0;
}

.top {
  margin-top: 10px;
  display: flex;
}

.top app-button{
  flex:1;
  margin-right: 5px
}

.top app-button:first-child{
  flex: 1;
}

.top app-button:last-child{
  flex: 1;
  
}

.o-title{
  color: black;
  text-align: center;
  font-size: 12pt;
}

.info{
  color: black;
}


.sort-btn {
  position: absolute;
  top: 40%;
  left: 75%;
  color: var(--icon-color);
}

.sort-wrapper {
  position: fixed; 
  width: 100%;
  left: 0;
  top: 35%;
  z-index: 9999;
}

.sort-menu-cont {
  width: 90%;
  margin: 0 auto;
  background-color: #fff;
  border: 2px solid #4a4242;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
}

.corresponding {
  margin-top: 10px;
  display: flex;
}

.corresponding app-button{
  flex:1;
  margin-right: 5px
}

.corresponding app-button:first-child{
  flex: 1;
}

.corresponding app-button:last-child{
  flex: 1;
  
}

